package inventario.Modelo;

public class Producto {
 private int id;
 private String nombre;
 private String descripcion;
 private float precioVenta;
 private float precioCompra;
 private float iva;
 private int stock;
 
 public Producto(int id, String nombre, String descripcion, float precio, float precioCompra,
        float iva, int stock){
 this.id = id;
 this.nombre = nombre;
 this.descripcion = descripcion;
 this.precioVenta = precio;
 this.precioCompra = precioCompra;
 this.iva = iva;
 this.stock = stock;
 
   
 
 }

    public int getId() {
        return id;
    }

    public void setId(int id) {
        this.id = id;
    }

    public String getNombre() {
        return nombre;
    }

    public void setNombre(String nombre) {
        this.nombre = nombre;
    }

    public String getDescripcion() {
        return descripcion;
    }

    public void setDescripcion(String descripcion) {
        this.descripcion = descripcion;
    }

    public float getPrecioVenta() {
        return precioVenta;
    }

    public void setPrecioVenta(float precioVenta) {
        this.precioVenta = precioVenta;
    }

   
  

    public float getPrecioCompra() {
        return precioCompra;
    }

    public void setPrecioCompra(float precioCompra) {
        this.precioCompra = precioCompra;
    }

    public float getIva() {
        return iva;
    }

    public void setIva(float iva) {
        this.iva = iva;
    }

    public int getStock() {
        return stock;
    }

    public void setStock(int stock) {
        this.stock = stock;
    }
}
